[gd_scene load_steps=10 format=3 uid="uid://6mkg2rpb6p4s"]

[ext_resource type="FontFile" uid="uid://cmqyf6t67qmpu" path="res://Fonts/Gildeon.otf" id="1_2shtd"]
[ext_resource type="Script" uid="uid://pj1onekf2xx2" path="res://Godot script/Scenes Script/shop.gd" id="1_io27d"]
[ext_resource type="Script" uid="uid://cr0ld030fqmh8" path="res://Shop/ShopRestockSystem.gd" id="2_3ps1r"]
[ext_resource type="FontFile" uid="uid://docxxo2smmwtj" path="res://Fonts/Helvetica-Bold.ttf" id="2_io27d"]
[ext_resource type="Script" uid="uid://ck173dldbayxp" path="res://Shop/problem_generator.gd" id="3_s8dlv"]
[ext_resource type="Script" uid="uid://i11lkvdwa0ms" path="res://Shop/GameManager.gd" id="3_ymrm4"]
[ext_resource type="Script" uid="uid://csiirhl08dyll" path="res://Shop/SimpleUi.gd" id="4_s8dlv"]
[ext_resource type="Texture2D" uid="uid://b243y70xppp7a" path="res://Images/Tools/sprite_0.png" id="8_s8dlv"]
[ext_resource type="Texture2D" uid="uid://mgrqweear6yc" path="res://Images/Tools/sprite_1.png" id="9_tyrku"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -1.0
offset_right = 23.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_io27d")

[node name="ShopRestockSystem" type="Node" parent="."]
script = ExtResource("2_3ps1r")

[node name="ProblemGenerator" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_s8dlv")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_ymrm4")

[node name="SimpleUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_s8dlv")

[node name="ShopPanel" type="Panel" parent="SimpleUI"]
visible = false
layout_mode = 0
offset_left = 274.0
offset_top = 47.0
offset_right = 890.0
offset_bottom = 585.0

[node name="ShopTextContainer" type="Panel" parent="SimpleUI/ShopPanel"]
layout_mode = 2
offset_left = 22.0
offset_top = 14.0
offset_right = 304.0
offset_bottom = 57.0

[node name="RichTextLabel" type="RichTextLabel" parent="SimpleUI/ShopPanel/ShopTextContainer"]
layout_mode = 0
offset_left = 21.0
offset_top = 8.0
offset_right = 287.0
offset_bottom = 47.0
theme_override_fonts/normal_font = ExtResource("1_2shtd")
theme_override_font_sizes/normal_font_size = 40
text = "Equation Shop"

[node name="TimerLabel" type="Label" parent="SimpleUI/ShopPanel"]
layout_mode = 2
offset_left = 448.0
offset_top = 18.0
offset_right = 505.0
offset_bottom = 50.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 39
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="SimpleUI/ShopPanel"]
layout_mode = 2
offset_left = 535.0
offset_top = 2.0
offset_right = 613.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("2_io27d")
text = "back"

[node name="ScrollContainer" type="ScrollContainer" parent="SimpleUI/ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SimpleUI/ShopPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ItemContainer" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="CommonPanel" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer"]
layout_mode = 2
offset_left = 40.0
offset_top = 25.0
offset_right = 566.0
offset_bottom = 171.0

[node name="StockLabel" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/CommonPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 85.0
offset_right = 105.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "On Stock"

[node name="ItemRarity" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/CommonPanel"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 513.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Common"

[node name="ItemDescription" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/CommonPanel"]
layout_mode = 0
offset_left = 151.0
offset_top = 59.0
offset_right = 523.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Addition is the process of combining two or 
more numbers to find their total or sum.
Subtraction is the process of taking one number 
away from another to find the difference."

[node name="ItemPrice" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/CommonPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 111.0
offset_right = 79.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "$10"

[node name="Item" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/CommonPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 238.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "Addition & Subtraction"

[node name="ButtonContainer" type="HBoxContainer" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -263.0
offset_top = -95.0
offset_right = 263.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="BuyCommon" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Buy"

[node name="GiftButton" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Gift"

[node name="ItemContainer2" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="UncommonPanel" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2"]
layout_mode = 2
offset_left = 40.0
offset_top = 25.0
offset_right = 566.0
offset_bottom = 171.0

[node name="UncommonStockLabel" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/UncommonPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 85.0
offset_right = 105.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "On Stock"

[node name="ItemRarity" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/UncommonPanel"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 513.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Rare"

[node name="ItemDescription" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/UncommonPanel"]
layout_mode = 0
offset_left = 151.0
offset_top = 59.0
offset_right = 522.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Multiplication is the process of adding a number 
to itself a particular number of times. Division is
the process of finding the number of times one 
number is contained within another.
"

[node name="ItemPrice" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/UncommonPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 111.0
offset_right = 79.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "$50"

[node name="Item" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/UncommonPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 238.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "Multiplication & Division"

[node name="ButtonContainer" type="HBoxContainer" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -263.0
offset_top = -95.0
offset_right = 263.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="BuyUncommon" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Buy"

[node name="GiftButton" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Gift"

[node name="ItemContainer3" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="RarePanel" type="Panel" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3"]
layout_mode = 2
offset_left = 40.0
offset_top = 25.0
offset_right = 566.0
offset_bottom = 171.0

[node name="RareStockLabel" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/RarePanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 85.0
offset_right = 105.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "On Stock"

[node name="ItemRarity" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/RarePanel"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 513.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Epic"

[node name="ItemDescription" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/RarePanel"]
layout_mode = 0
offset_left = 151.0
offset_top = 59.0
offset_right = 523.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 19
text = "Addition is the process of combining two or 
more numbers to find their total or sum.
Subtraction is the process of taking one number 
away from another to find the difference."

[node name="ItemPrice" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/RarePanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 111.0
offset_right = 79.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "$100"

[node name="Item" type="Label" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/RarePanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 238.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 25
text = "Polynomials"

[node name="ButtonContainer" type="HBoxContainer" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -263.0
offset_top = -95.0
offset_right = 263.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="BuyRare" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Buy"

[node name="GiftButton" type="Button" parent="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 35
text = "Gift"

[node name="ToolsButton" type="Button" parent="SimpleUI/ShopPanel"]
layout_mode = 0
offset_left = 312.0
offset_top = 15.0
offset_right = 438.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 30
text = "Tools"

[node name="ToolShopPanel" type="Panel" parent="SimpleUI"]
layout_mode = 0
offset_left = 274.0
offset_top = 47.0
offset_right = 890.0
offset_bottom = 585.0

[node name="Back" type="Button" parent="SimpleUI/ToolShopPanel"]
layout_mode = 0
offset_left = 535.0
offset_top = 2.0
offset_right = 613.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("2_io27d")
text = "back"

[node name="ShopTextContainer" type="Panel" parent="SimpleUI/ToolShopPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 14.0
offset_right = 220.0
offset_bottom = 57.0

[node name="RichTextLabel" type="RichTextLabel" parent="SimpleUI/ToolShopPanel/ShopTextContainer"]
layout_mode = 0
offset_left = 21.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 47.0
theme_override_fonts/normal_font = ExtResource("1_2shtd")
theme_override_font_sizes/normal_font_size = 40
text = "Tool Shop"

[node name="EquationsButton" type="Button" parent="SimpleUI/ToolShopPanel"]
layout_mode = 0
offset_left = 246.0
offset_top = 16.0
offset_right = 372.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 30
text = "Equations"

[node name="ScrollContainer" type="ScrollContainer" parent="SimpleUI/ToolShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SimpleUI/ToolShopPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ItemContainer" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ToolPanel" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer"]
layout_mode = 0
offset_left = 40.0
offset_top = 21.0
offset_right = 566.0
offset_bottom = 179.0

[node name="ToolName" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ToolPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "Calculator"

[node name="ToolDescription" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ToolPanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 68.0
offset_right = 360.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 20
text = "Automatically solves any type of 
problem"

[node name="ToolPrice" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ToolPanel"]
layout_mode = 0
offset_left = 366.0
offset_top = 13.0
offset_right = 512.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "$ 50,000"

[node name="TextureRect" type="TextureRect" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ToolPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 81.0
offset_bottom = 83.0
texture = ExtResource("8_s8dlv")

[node name="BuyTool" type="Button" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer"]
layout_mode = 0
offset_left = 420.0
offset_top = 112.0
offset_right = 554.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="ItemContainer2" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ToolPanel" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2"]
layout_mode = 0
offset_left = 40.0
offset_top = 21.0
offset_right = 566.0
offset_bottom = 179.0

[node name="ToolName" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ToolPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "Display Rack"

[node name="ToolDescription" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ToolPanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 68.0
offset_right = 360.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 20
text = "Puts your rarest problem that 
you solved"

[node name="ToolPrice" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ToolPanel"]
layout_mode = 0
offset_left = 386.0
offset_top = 13.0
offset_right = 532.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "$ 9,000"

[node name="TextureRect" type="TextureRect" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ToolPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 81.0
offset_bottom = 83.0
texture = ExtResource("9_tyrku")

[node name="BuyTool" type="Button" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer2"]
layout_mode = 0
offset_left = 420.0
offset_top = 112.0
offset_right = 554.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="ItemContainer3" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ToolPanel" type="Panel" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3"]
layout_mode = 0
offset_left = 40.0
offset_top = 21.0
offset_right = 566.0
offset_bottom = 179.0

[node name="ToolName" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ToolPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "Upgrade Medal"

[node name="ToolDescription" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ToolPanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 68.0
offset_right = 360.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 20
text = "Award this to your equation to 
upgrade it to the next rarity "

[node name="ToolPrice" type="Label" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ToolPanel"]
layout_mode = 0
offset_left = 363.0
offset_top = 13.0
offset_right = 545.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 40
text = "$100,000"

[node name="TextureRect" type="TextureRect" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ToolPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 81.0
offset_bottom = 83.0
texture = ExtResource("8_s8dlv")

[node name="BuyTool" type="Button" parent="SimpleUI/ToolShopPanel/ScrollContainer/VBoxContainer/ItemContainer3"]
layout_mode = 0
offset_left = 420.0
offset_top = 112.0
offset_right = 554.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("1_2shtd")
theme_override_font_sizes/font_size = 30
text = "Buy"

[connection signal="button_down" from="SimpleUI/ShopPanel/Back" to="." method="_on_back_button_down"]
[connection signal="pressed" from="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer/ButtonContainer/BuyCommon" to="GameManager" method="test_buy_basic_math"]
[connection signal="pressed" from="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer2/ButtonContainer/BuyUncommon" to="GameManager" method="test_buy_uncommon_math"]
[connection signal="pressed" from="SimpleUI/ShopPanel/ScrollContainer/VBoxContainer/ItemContainer3/ButtonContainer/BuyRare" to="GameManager" method="test_buy_rare_math"]
[connection signal="button_down" from="SimpleUI/ShopPanel/ToolsButton" to="." method="_on_tools_button_button_down"]
[connection signal="button_down" from="SimpleUI/ToolShopPanel/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="SimpleUI/ToolShopPanel/EquationsButton" to="." method="_on_equations_button_button_down"]
